--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Newsletter-signup",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "nodemailer": "^6.4.3",
     "request": "^2.88.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
